[gd_scene load_steps=5 format=2]

[ext_resource path="res://script/investigation_editor.gd" type="Script" id=1]
[ext_resource path="res://gui/fonts/default_20.tres" type="DynamicFont" id=2]
[ext_resource path="res://gui/fonts/default_data.tres" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
outline_color = Color( 0, 0, 0, 0.498039 )
use_filter = true
font_data = ExtResource( 3 )

[node name="Control" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 988.0
margin_bottom = 666.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CenterContainer" type="AspectRatioContainer" parent="HBoxContainer/VBoxContainer"]
margin_right = 988.0
margin_bottom = 382.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
alignment_horizontal = 0
alignment_vertical = 0

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/VBoxContainer/CenterContainer"]
margin_right = 382.0
margin_bottom = 382.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Editing" type="Label" parent="HBoxContainer/VBoxContainer"]
self_modulate = Color( 0.5, 0.5, 0.5, 1 )
margin_top = 386.0
margin_right = 988.0
margin_bottom = 406.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = ExtResource( 2 )
text = "editing: examinable 1 script"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="HBoxContainer/VBoxContainer"]
margin_top = 410.0
margin_right = 988.0
margin_bottom = 666.0
rect_min_size = Vector2( 0, 256 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
custom_colors/symbol_color = Color( 0.584314, 0.584314, 0.584314, 1 )
custom_colors/brace_mismatch_color = Color( 0.545098, 0, 0, 1 )
highlight_current_line = true
syntax_highlighting = true
show_line_numbers = true
draw_tabs = true
fold_gutter = true
highlight_all_occurrences = true
minimap_draw = true
minimap_width = 40
caret_blink = true

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 992.0
margin_right = 1184.0
margin_bottom = 666.0
rect_min_size = Vector2( 192, 0 )

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer2"]
margin_right = 192.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 2 )
text = "Investigation Editor"
align = 1

[node name="Close" type="ToolButton" parent="HBoxContainer/VBoxContainer2"]
margin_top = 24.0
margin_right = 192.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 2 )
text = "Close"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator2" type="HSeparator" parent="HBoxContainer/VBoxContainer2"]
margin_top = 56.0
margin_right = 192.0
margin_bottom = 60.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="File" type="Label" parent="HBoxContainer/VBoxContainer2"]
margin_top = 64.0
margin_right = 192.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 1 )
text = "[none]"
align = 1

[node name="NewOpen" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2"]
margin_top = 84.0
margin_right = 192.0
margin_bottom = 112.0

[node name="New" type="ToolButton" parent="HBoxContainer/VBoxContainer2/NewOpen"]
margin_right = 94.0
margin_bottom = 28.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "New"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Open" type="ToolButton" parent="HBoxContainer/VBoxContainer2/NewOpen"]
margin_left = 98.0
margin_right = 192.0
margin_bottom = 28.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Open"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2"]
margin_top = 116.0
margin_right = 192.0
margin_bottom = 144.0

[node name="Save" type="ToolButton" parent="HBoxContainer/VBoxContainer2/Save"]
margin_right = 94.0
margin_bottom = 28.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveAs" type="ToolButton" parent="HBoxContainer/VBoxContainer2/Save"]
margin_left = 98.0
margin_right = 192.0
margin_bottom = 28.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Save As"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator5" type="HSeparator" parent="HBoxContainer/VBoxContainer2"]
margin_top = 148.0
margin_right = 192.0
margin_bottom = 152.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer3" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2"]
margin_top = 156.0
margin_right = 192.0
margin_bottom = 184.0

[node name="ToolButton7" type="ToolButton" parent="HBoxContainer/VBoxContainer2/HBoxContainer3"]
margin_right = 96.0
margin_bottom = 28.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Add Area"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToolButton5" type="ToolButton" parent="HBoxContainer/VBoxContainer2/HBoxContainer3"]
margin_left = 100.0
margin_right = 192.0
margin_bottom = 28.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Move"

[node name="HSeparator4" type="HSeparator" parent="HBoxContainer/VBoxContainer2"]
margin_top = 188.0
margin_right = 192.0
margin_bottom = 192.0

[node name="HBoxContainer4" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2"]
margin_top = 196.0
margin_right = 192.0
margin_bottom = 224.0

[node name="SetName" type="ToolButton" parent="HBoxContainer/VBoxContainer2/HBoxContainer4"]
margin_right = 100.0
margin_bottom = 28.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Set Name"

[node name="SetBackgroun" type="ToolButton" parent="HBoxContainer/VBoxContainer2/HBoxContainer4"]
margin_left = 104.0
margin_right = 192.0
margin_bottom = 28.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Set BG"

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/VBoxContainer2"]
margin_top = 228.0
margin_right = 192.0
margin_bottom = 232.0

[node name="Area" type="VBoxContainer" parent="HBoxContainer/VBoxContainer2"]
margin_top = 236.0
margin_right = 192.0
margin_bottom = 666.0
size_flags_vertical = 3

[node name="Talk" type="ScrollContainer" parent="HBoxContainer/VBoxContainer2/Area"]
margin_right = 192.0
margin_bottom = 294.0
size_flags_vertical = 3

[node name="Box" type="VBoxContainer" parent="HBoxContainer/VBoxContainer2/Area/Talk"]
margin_right = 192.0
margin_bottom = 294.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AddTalk" type="ToolButton" parent="HBoxContainer/VBoxContainer2/Area"]
margin_top = 298.0
margin_right = 192.0
margin_bottom = 326.0
size_flags_vertical = 9
custom_fonts/font = ExtResource( 2 )
text = "Add Talk"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RenameTalk" type="ToolButton" parent="HBoxContainer/VBoxContainer2/Area"]
margin_top = 330.0
margin_right = 192.0
margin_bottom = 358.0
size_flags_vertical = 9
custom_fonts/font = ExtResource( 2 )
text = "Rename Talk"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RemoveTalk" type="ToolButton" parent="HBoxContainer/VBoxContainer2/Area"]
margin_top = 362.0
margin_right = 192.0
margin_bottom = 390.0
size_flags_vertical = 9
custom_fonts/font = ExtResource( 2 )
text = "Remove Talk"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator3" type="HSeparator" parent="HBoxContainer/VBoxContainer2/Area"]
margin_top = 394.0
margin_right = 192.0
margin_bottom = 398.0

[node name="AddExaminable" type="ToolButton" parent="HBoxContainer/VBoxContainer2/Area"]
margin_top = 402.0
margin_right = 192.0
margin_bottom = 430.0
custom_fonts/font = ExtResource( 2 )
text = "Add Examinable"

[node name="ToolButton2" type="ToolButton" parent="HBoxContainer/VBoxContainer2/Area"]
visible = false
margin_top = 540.0
margin_right = 192.0
margin_bottom = 568.0
custom_fonts/font = ExtResource( 2 )
text = "Add Character"

[node name="ToolButton3" type="ToolButton" parent="HBoxContainer/VBoxContainer2/Area"]
visible = false
margin_top = 572.0
margin_right = 192.0
margin_bottom = 600.0
custom_fonts/font = ExtResource( 2 )
text = "Add..."

[node name="SetBgPopup" type="PopupMenu" parent="."]
margin_right = 20.0
margin_bottom = 20.0

[node name="MovePopup" type="PopupMenu" parent="."]
margin_right = 20.0
margin_bottom = 20.0

[node name="NewAreaPopup" type="PopupPanel" parent="."]
margin_right = 8.0
margin_bottom = 8.0

[node name="VBoxContainer" type="VBoxContainer" parent="NewAreaPopup"]
margin_left = 4.0
margin_top = 4.0
margin_right = 260.0
margin_bottom = 82.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="LineEdit" parent="NewAreaPopup/VBoxContainer"]
margin_right = 256.0
margin_bottom = 38.0
rect_min_size = Vector2( 256, 0 )
text = "Area"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ok" type="ToolButton" parent="NewAreaPopup/VBoxContainer"]
margin_top = 42.0
margin_right = 256.0
margin_bottom = 78.0
size_flags_horizontal = 3
text = "OK"

[node name="RenameTalkPopup" type="PopupPanel" parent="."]
margin_right = 8.0
margin_bottom = 8.0

[node name="VBoxContainer" type="VBoxContainer" parent="RenameTalkPopup"]
margin_left = 4.0
margin_top = 4.0
margin_right = 260.0
margin_bottom = 82.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="LineEdit" parent="RenameTalkPopup/VBoxContainer"]
margin_right = 256.0
margin_bottom = 38.0
rect_min_size = Vector2( 256, 0 )
text = "Area"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ok" type="ToolButton" parent="RenameTalkPopup/VBoxContainer"]
margin_top = 42.0
margin_right = 256.0
margin_bottom = 78.0
size_flags_horizontal = 3
text = "OK"

[node name="SaveDialog" type="FileDialog" parent="."]
margin_right = 479.0
margin_bottom = 186.0
rect_min_size = Vector2( 800, 600 )
rect_scale = Vector2( 0.75, 0.75 )
window_title = "Save Investigation"
access = 1
show_hidden_files = true
current_dir = "user://home/malucart/querco/quercos"
current_file = "inv.json"
current_path = "user://home/malucart/querco/quercos/inv.json"

[node name="OpenDialog" type="FileDialog" parent="."]
margin_right = 479.0
margin_bottom = 186.0
rect_min_size = Vector2( 800, 600 )
rect_scale = Vector2( 0.75, 0.75 )
window_title = "Open a File"
mode = 0
access = 1
show_hidden_files = true
current_dir = "user://home/malucart/querco/quercos"
current_path = "user://home/malucart/querco/quercos/"

[connection signal="draw" from="HBoxContainer/VBoxContainer/CenterContainer/TextureRect" to="." method="_bg_draw"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/Close" to="." method="_close"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/NewOpen/New" to="." method="_new"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/NewOpen/Open" to="." method="_open"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/Save/Save" to="." method="_save"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/Save/SaveAs" to="." method="_save_as"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/HBoxContainer3/ToolButton7" to="." method="_add_area"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/HBoxContainer3/ToolButton5" to="." method="_move"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/HBoxContainer4/SetBackgroun" to="." method="_set_bg"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/Area/AddTalk" to="." method="_add_talk"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/Area/RenameTalk" to="." method="_rename_talk"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/Area/RemoveTalk" to="." method="_remove_talk"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/Area/AddExaminable" to="." method="_add_examinable"]
[connection signal="id_pressed" from="SetBgPopup" to="." method="_set_bg_selected"]
[connection signal="id_pressed" from="MovePopup" to="." method="_move_selected"]
[connection signal="pressed" from="NewAreaPopup/VBoxContainer/Ok" to="." method="_add_area_ok"]
[connection signal="pressed" from="RenameTalkPopup/VBoxContainer/Ok" to="." method="_rename_talk_ok"]
[connection signal="file_selected" from="SaveDialog" to="." method="_save_selected"]
[connection signal="file_selected" from="OpenDialog" to="." method="_open_selected"]
